2005-09-09  Kevin Buettner  <kevinb@redhat.com>

	* elf32-am33lin.c (bfd.h, sysdep.h, elf-bfd.h, elf/mn10300.h):
	Include.
	(elf32_am33lin_grok_prstatus, elf32_am33lin_grok_psinfo): New
	functions.
	(elf_backend_grok_prstatus, elf_backend_grok_psinfo): Define.

2005-09-09  Richard Earnshaw  <richard.earnshaw@arm.com>

	* elf32-arm.c (elf32_arm_section_from_shdr): Accept SHT_ARM_PREEMPTMAP
	and SHT_ARM_ATTRIBUTES.

2005-09-08  H.J. Lu  <hongjiu.lu@intel.com>

	* elflink.c (elf_get_linked_section_vma): Fix a typo in comment.
	* elfxx-ia64.c (elf_backend_link_order_error_handler): Likewise.

2005-09-08  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/1263
	* elflink.c (elf_link_add_object_symbols): Abort for
	--just-symbols on DSO.

2005-09-08  Paul Brook  <paul@codesourcery.com>

	* reloc.c: Rename BFD_RELOC_ARM_SMI to BFD_RELOC_ARM_SMC.
	* bfd-in2.h: Regenerate.
	* libbfd.h: Regenerate.

2005-09-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/1301
	* elflink.c (_bfd_elf_merge_symbol): Don't check undefined
	symbol introduced by "ld -u" for TLS.

2005-09-02  Paul Brook  <paul@codesourcery.com>

	* libbdf.h: Regenerate.
	* bfd-in2.h: Regenerate.
	* reloc.c: Add BFD_RELOC_ARM_T32_CP_OFF_IMM and
	BFD_RELOC_ARM_T32_CP_OFF_IMM_S2.

2005-09-01  Dmitry Diky <diwil@spec.ru>

	* elf32-msp430.c (msp430_elf_relax_delete_bytes): Do not adjust
	local symbols and move it to
	(msp430_elf_relax_adjust_locals): New function - walk over the
	sections in the bfd and adjust relocations as necessary.
	
2005-08-31  DJ Delorie  <dj@redhat.com>

	* elf32-i386.c (elf_i386_check_relocs): Don't cast a unary &
	address operator, as that breaks GCC's strict aliasing rules.
	(elf_i386_size_dynamic_sections): Avoid the need for type
	punning.
	* elf64-x86-64.c (elf_x86_64_check_relocs): Don't cast a unary
	& address operator, as that breaks GCC's strict aliasing
	rules.
	(elf_x86_64_size_dynamic_sections): Avoid the need for type
	punning.

2005-08-30  Phil Edwards  <phil@codesourcery.com>
